2009-01-10  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (pos_visible_p): When iterator stops on the last glyph
	of a display vector, backtrack.
	(try_window_reusing_current_matrix): Check glyph type before
	referencing charpos member.

2009-01-10  Eli Zaretskii  <eliz@gnu.org>

	Fix Bug #876:

	* coding.c (inhibit_null_byte_detection): New variable.
	(detect_coding, detect_coding_system): Don't pay attention to null
	bytes if inhibit_null_byte_detection is non-zero.
	(syms_of_coding) <inhibit-null-byte-detection>: Declare and
	document.
	<inhibit-iso-escape-detection>: Doc fix.

2009-01-09  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (add_font_entity_to_list): Don't report unknown
	Windows charset as any unrecognized registry. (Bug#1548)
	Only report Unicode Plane 2 fonts as unicode-sip.

2009-01-09  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Fx_font_family_list): Function deleted.  Compatibility
	version moved to faces.el.

	* font.c (Ffont_family_list): Return a list of strings, not
	symbols.

2009-01-09  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (x_set_frame_parameters): Remember requested value for
	fullscreen before it's reset by the parameter handler.

2009-01-09  Glenn Morris  <rgm@gnu.org>

	* keyboard.c (last_command_char): For clarity, rename to...
	(last_command-event): ... and update all users.
	(last_input_char): For clarity, rename to...
	(last_input_event): ... and update all users.
	(last-command-char, last-input-char): Move to subr.el as aliases.
	* cmds.c, commands.h: Update for last_command_char rename.

2009-01-08  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_open_for_lface): Handle unspecified height
	attribute.

2009-01-08  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Vx_pointer_shape, Vx_nontext_pointer_shape)
	(Vx_mode_pointer_shape, Vx_window_horizontal_drag_shape)
	(Vx_hourglass_pointer_shape, Vx_sensitive_text_pointer_shape):
	Don't declare.